# mirrorbase

./: Dockerfile  LICENSE  README.md  docker-compose.yml  example.py  pyproject.toml
demos/: 01_connect_and_clone.py  02_multiple_clones.py  03_run_queries.py  04_write_to_clone.py  05_benchmark.py  06_rest_api.sh  07_agent_sandbox.py  08_advanced_queries.py
deploy/: docker-compose.prod.yml  setup.sh
docs/: getting-started.md  production-deployment.md
examples/: production_integration.py
mirrorbase/: __init__.py  cli.py  client.py  clone.py  config.py  core.py  exceptions.py  fdw.py  postgres.py  replicator.py  server.py  streaming.py  sync.py
tests/: test_clone.py  test_config.py  test_integration.py  test_postgres.py  test_replicator.py  test_server.py
